# BrainMate

./: .env-instructions  .gitignore  README.md  docker-compose.otel.yml  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
.secrets/: internal_api_tokens.txt
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
certs/: fullchain.pem  privkey.pem
components/: auth-shell.tsx  landing-page.tsx  special-navbar.tsx  theme-toggle.tsx
components/aceternity/: animated-testimonials.tsx  background-beams.tsx  background-gradient.tsx  bento-grid.tsx  floating-nav.tsx  glowing-card.tsx  hover-effect.tsx  sidebar.tsx  (+2 more)
docs/: auth-audit-report.md
hooks/: useRevealObserver.ts
infra/: infrastructure-blueprint.md
lib/: api-client.ts  haptics.ts  internal-api-token.ts  motion-variants.ts  opentelemetry.ts  reconciliation-worker.ts  redis.ts  risk-engine.ts  rust-auth.ts  secrets.ts  supabase.ts  tracing.ts  writeright-errors.ts  writeright-logger.ts  writeright-queue.ts  writeright-toast.ts  writeright-validators.ts
python-worker/: .env.example  README.md  conftest.py  main.py  requirements.txt
rust-auth-gateway/: Cargo.toml  README.md  deny.toml
rust-auth-gateway/migrations/: 0001_auth_schema.sql
rust-auth-gateway/src/: auth.rs  auth_cache.rs  blacklist.rs  config.rs  db.rs  error.rs  jwks_cache.rs  lib.rs  main.rs  migrations.rs  models.rs  nonce_store.rs  otp_store.rs  rate_limiter.rs  reconciliation.rs  redis_client.rs  refresh_store.rs  risk_engine.rs  router.rs  secrets.rs  security_utils.rs  session_store.rs  telemetry.rs  waf_feedback.rs
rust-auth-gateway/tests/: integration_tests.rs  security_tests.rs
tests/: architecture.test.ts  health.test.ts  setup.ts  writeright_ui.test.tsx
types/: external-secrets.d.ts  writeright.ts
(+142 files in other folders)
