[package]
name = "brainmate-auth-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
base64 = "0.22.1"
redis = { version = "0.25", features = ["tokio-comp", "tokio-rustls-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
hex = "0.4.3"
http = "1.3.1"
ipnet = "2.12.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.1"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "set-header", "timeout", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }
dotenv = "0.15"
aws-config = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
chrono = { version = "0.4.44", features = ["clock"] }

[features]
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
gcp-secrets = []  # Add google-secretmanager1 dep when implementing
